modify build to not produce a fat jar, i'd rather stick to running the benchmarks via the sbt repl. add some nice plugins including buildinfo and ensime. cleanup and modernize the dependencies. move to 2.10.1 for scalac.